# alcove

./: .gitignore  Alcove.sln  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  conanfile.py  conanfile.txt  pymake.py
Alcove/: Alcove.vcxproj  Alcove.vcxproj.filters
app/: CMakeLists.txt  main.cpp
assets/: README.md
cmake/: Catch2-debug-x86_64-data.cmake  Catch2-release-x86_64-data.cmake  Catch2Config.cmake  SDL2-Target-debug.cmake  SDL2-debug-x86_64-data.cmake  SDL2-release-x86_64-data.cmake  SDL2Config.cmake  SDL2ConfigVersion.cmake  SDL2Targets.cmake  UpdateGitSubmodule.cmake  VulkanHeaders-Target-release.cmake  VulkanHeaders-debug-x86_64-data.cmake  VulkanHeaders-release-x86_64-data.cmake  VulkanHeadersConfig.cmake  assimp-Target-debug.cmake  assimp-config.cmake  assimp-debug-x86_64-data.cmake  clipper-config-version.cmake  clipper-config.cmake  clipper-debug-x86_64-data.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  draco-debug-x86_64-data.cmake  fmt-debug-x86_64-data.cmake  fmt-release-x86_64-data.cmake  glm-Target-release.cmake  glm-config.cmake  glm-debug-x86_64-data.cmake  glm-release-x86_64-data.cmake  imgui-config-version.cmake  imgui-config.cmake  imgui-debug-x86_64-data.cmake  imgui-release-x86_64-data.cmake  minizip-debug-x86_64-data.cmake  module-BZip2-debug-x86_64-data.cmake  module-ZLIB-debug-x86_64-data.cmake  openddlparser-config.cmake  openddlparser-debug-x86_64-data.cmake  poly2tri-debug-x86_64-data.cmake  pugixml-config.cmake  (+9 more)
cmake-modules/: CompileGLSLShaders.cmake  CopyFilesByExtension.cmake  FindVulkanExtra.cmake
config/: CMakePresets.json
include/: README.md
include/alcove/core/: shader_compiler.h
include/alcove/core/engine/: vk.h  vk_common.h  vk_descriptors.h  vk_engine.h  vk_gpu_selector.h  vk_images.h  vk_loader.h  vk_pipelines.h  vk_structs.h  vk_types.h
include/alcove/core/engine/compiler/: shader_compiler.h
include/alcove/core/engine/debug_utils/: vk_debug_utils.h
python/: conanfile.py  file_organizer.py
shaders/: colored_triangle.frag  colored_triangle.vert  gradient.comp  gradient.comp.spv  sky.comp
src/: CMakeLists.txt  ConanPresets.json  fact.cpp  util.h
src/core/: CMakeLists.txt
src/core/engine/: CMakeLists.txt  vk_descriptors.cpp  vk_engine.cpp  vk_loader.cpp  vk_pipelines.cpp
src/core/engine/compiler/: CMakeLists.txt  shader_compiler.cpp
src/core/engine/debug_utils/: CMakeLists.txt  vk_debug_utils.cpp
tests/: CMakeLists.txt  main.cpp
tests/core/: CMakeLists.txt
tests/core/engine/: CMakeLists.txt  vk_engine.cpp
tests/core/engine/compiler/: CMakeLists.txt  shader_compiler_test.cpp
tests/core/engine/debug_utils/: vk_debug_utils.cpp
